--- a/ansible/roles/k8s-base/tasks/main.yml
+++ b/ansible/roles/k8s-base/tasks/main.yml
@@ -52,7 +52,7 @@
   when: ansible_distribution == 'Ubuntu'
   become: yes
   apt_key:
-    url: https://packages.cloud.google.com/apt/doc/apt-key.gpg
+    url: https://mirrors.aliyun.com/kubernetes/apt/doc/apt-key.gpg
     state: present
   tags:
     - k8s
@@ -61,7 +61,7 @@
   when: ansible_distribution == 'Ubuntu'
   become: yes
   apt_repository:
-    repo: 'deb http://apt.kubernetes.io/ kubernetes-xenial-unstable main'
+    repo: 'deb https://mirrors.aliyun.com/kubernetes/apt kubernetes-xenial main'
     state: present
     update_cache: yes
   tags:
