--- a/ansible/roles/k8s-master/tasks/main.yml
+++ b/ansible/roles/k8s-master/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Ensure kubeadm initialization
   become: yes
-  command: "kubeadm init --token=2f1a31.00f66dec74fd53f3 --api-advertise-addresses=172.42.42.11 --skip-preflight-checks=true"
+  command: "kubeadm init --token=2f1a31.00f66dec74fd53f3 --apiserver-advertise-address=172.42.42.11"
   tags:
     - k8s
 
