pull image from aliyun & change /etc/docker/daemon.json file

--- a/ansible/roles/k8s-base/tasks/main.yml
+++ b/ansible/roles/k8s-base/tasks/main.yml
@@ -71,14 +71,30 @@
   when: ansible_distribution == 'Ubuntu'
   become: yes
   apt:
-    name: "{{ item }}"
+    name: ['docker.io', 'kubelet', 'kubeadm', 'kubectl', 'kubernetes-cni']
     state: latest
-  with_items:
-    - docker.io
-    - kubelet
-    - kubeadm
-    - kubectl
-    - kubernetes-cni
+  tags:
+    - k8s
+
+#- name: Ensure Base Kubernetes
+#  when: ansible_distribution == 'Ubuntu'
+#  become: yes
+#  apt:
+#    name: "{{ item }}"
+#    state: latest
+#  with_items:
+#    - docker.io
+#    - kubelet
+#    - kubeadm
+#    - kubectl
+#    - kubernetes-cni
+#  tags:
+#    - k8s
+
+- name: Configure docker daemon
+  when: ansible_distribution == 'Ubuntu'
+  become: yes
+  shell: bash /vagrant/scripts/daemon.json.sh
   tags:
     - k8s
 
