--- a/ansible/roles/k8s-master/tasks/main.yml
+++ b/ansible/roles/k8s-master/tasks/main.yml
@@ -1,4 +1,11 @@
 ---
+- name: Pull docker images from aliyun
+  when: ansible_distribution == 'Ubuntu'
+  become: yes
+  shell: bash /vagrant/scripts/pull.sh
+  tags:
+    - k8s
+
 - name: Ensure kubeadm initialization
   become: yes
   command: "kubeadm init --token=2f1a31.00f66dec74fd53f3 --apiserver-advertise-address=172.42.42.11"
