--- a/ansible/roles/k8s-worker/tasks/main.yml
+++ b/ansible/roles/k8s-worker/tasks/main.yml
@@ -1,4 +1,4 @@
 ---
 - name: Join Kubernetes Cluster
   become: yes
-  command: "kubeadm join --token=2f1a31.00f66dec74fd53f3 --skip-preflight-checks=true 172.42.42.11"
+  command: "kubeadm join --discovery-token-unsafe-skip-ca-verification --token=2f1a31.00f66dec74fd53f3 --skip-preflight-checks=true 172.42.42.11:6443"
